touched up gulp build and naming

--- a/src/css/untangled-ui-guide.css
+++ b/src/css/untangled-ui-guide.css
@@ -2,7 +2,7 @@
 import: ../README.md
 ---*/
 
-@import 'stylekit';
+@import 'untangled-ui-stylekit';
 
 /* stylelint-disable */
 .box-row { margin-bottom: 1rem; }
