--- a/src/css/components/switch.css
+++ b/src/css/components/switch.css
@@ -4,47 +4,53 @@ section: Components
 ---*/
 
 .c-switch {
-  background-color: #ddddd4;
+  background-color: var(--grey-200);
   border-radius: 10px;
   display: inline-block;
   height: 20px;
   user-select: none;
   width: 40px;
-  z-index: var(--zIndex-switch);
 
   .t-dark & { background-color: var(--grey-800); }
-}
 
+  label + & {
+    left: .5rem;
+    position: relative;
+    top: .25em;
+  }
+}
 
 .c-switch__paddle {
   display: inline-block;
   position: relative;
+  margin-bottom: 0;
   height: 20px;
   width: 40px;
+
   & > .c-icon {
     fill: var(--grey-400);
-    width: 17px;
+    width: 20px;
     height: 20px;
     transition: all .3s ease;
+    top: 0;
     position: relative;
 
-    &:not(:last-of-type) { fill: var(--grey-200); }
+    &:not(:last-of-type) { fill: var(--white); }
   }
 
   &::before {
-    background-color: var(--orange-900);
-    content: "";
-    display: inline-block;
-    border-radius: 100px;
-    height: 20px;
-    width: 20px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: all .2s ease;
-  }
+     content: "";
+     display: inline-block;
+     border-radius: 100px;
+     height: 20px;
+     width: 20px;
+     position: absolute;
+     background-color: var(--grey-400);
+     top: 0;
+     left: 0;
+     transition: all .2s ease;
+   }
 }
-
 
 .c-switch__input {
   height: 20px;
@@ -55,14 +61,13 @@ section: Components
   position: absolute;
 
   &:checked + .c-switch__paddle {
-    &::before {
-      background-color: var(--blue-900);
-      left: calc(100% - 20px);
-    }
+  &::before {
+     background-color: var(--blue-700);
+     left: calc(100% - 20px);
+   }
 
-    & > .c-icon { fill: var(--grey-400); }
+  & > .c-icon { fill: var(--grey-400); }
 
-    & > .c-icon:last-of-type { fill: var(--grey-200); }
+  & > .c-icon:last-of-type { fill: var(--white); }
   }
 }
-
