Cleaned up component and element sections

--- a/src/css/components/dropdown.css
+++ b/src/css/components/dropdown.css
@@ -74,7 +74,7 @@ section: Components
     &--large { height: var(--height-dropdown-select--large); }
 
     &--right {
-      padding: 0 .5rem 0 1.5rem;
+      padding: 0 .5rem 0 1.5rem !important;
       &::before {
         left: .5rem;
         right: auto;
