Clean up files and update articles

--- a/src/css/components/all.css
+++ b/src/css/components/all.css
@@ -23,6 +23,7 @@
  * Tooltip............Short messages for documenting things
  */
 
+@import 'avatar';
 @import 'backdrop';
 @import 'badge';
 @import 'button';
