--- a/src/css/untangled-ui-guide.css
+++ b/src/css/untangled-ui-guide.css
@@ -44,7 +44,7 @@ import: ../README.md
 
   code {
     background-color: var(--grey-50);
-    font-size: 90%;
+    font-size: 16px;
     border-radius: 2px;
     padding: .2em 0;
     margin: 0;
@@ -53,6 +53,7 @@ import: ../README.md
   pre {
     background-color: var(--grey-50);
     border-radius: 4px;
+    font-size: 16px;
     padding: 1em;
     line-height: 1.5;
     margin-bottom: 1em;
