--- a/src/css/untangled-ui-guide.css
+++ b/src/css/untangled-ui-guide.css
@@ -69,6 +69,7 @@ import: ../README.md
   background-color: var(--grey-50);
   font-size: 16px;
   line-height: 22px;
+  margin-bottom: 1em;
   padding: 5px 0;
   overflow-x: scroll;
 }
