Started figuring out defpalette

--- a/src/css/untangled-ui-guide.css
+++ b/src/css/untangled-ui-guide.css
@@ -31,6 +31,10 @@ import: ../README.md
 .box-tall { padding: 200px 0; }
 
 .ui-example__description {
+  :--headings {
+    color: var(--grey-900);
+  }
+
   h1 {
     font-size: var(--fontSize--medium);
   }
