--- a/src/css/objects/calendar.css
+++ b/src/css/objects/calendar.css
@@ -89,9 +89,10 @@ section: Objects
       border: 2px solid var(--red-600) !important;
     }
 
-    &.is-inactive { color: var(--grey-600); }
+    &.is-inactive { visibility: hidden; }
   }
 }
+
 
 .o-calendar--right {
   left: auto;
