Added expansion-panels and docs

--- a/src/css/components/all.css
+++ b/src/css/components/all.css
@@ -31,6 +31,7 @@
 @import 'checkbox';
 @import 'radio';
 @import 'dropdown';
+@import 'expansion-panel';
 @import 'field';
 @import 'icon';
 @import 'input';
