Added more examples for buttons

--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -15,13 +15,21 @@ section: Components
   /* Colored buttons */
   --color-button-alt--primary: var(--color-primary);
   --color-button-alt--secondary: var(--color-primary-contrast);
-  --color-button-alt--hover: var(--color-primary);
-  --color-button-alt--active: var(--color-primary);
+  --color-button-alt--hover: var(--color-primary-dark);
+  --color-button-alt--active: var(--color-primary-dark);
   --color-button-alt--focus: var(--white);
+
+  /* Dark theme buttons */
+  --color-button-dark--primary: color(var(--grey-500) a(18%));
+  --color-button-dark--secondary: var(--color-primary-contrast);
+  --color-button-dark--hover: var(--color-button-dark--primary);
+  --color-button-dark--active: color(var(--grey-500) a(18%));
+  --color-button-dark--focus: color(var(--black) a(10%));
 
   /* Disabled buttons */
   --color-button-disabled--primary: color(var(--black) a(12%));
   --color-button-disabled--secondary: color(var(--black) a(26%));
+  --color-button-disabled--dark: color(var(--black) a(30%));
 
   --fontSize-button: 14px;
   --fontSize-button--dense: calc(var(--fontSize-button) - 1px);
@@ -82,9 +90,17 @@ section: Components
   &:hover { background-color: var(--color-button--hover); }
 
   &:focus:not(:active),
-  &.is-focused { background-color: var(--color-button--focus); }
+  &.is-focused {
+     background-color: var(--color-button--focus);
 
-  &:--active { background-color: var(--color-button--active); }
+    .t-dark & { background-color: var(--color-button-dark--focus); }
+   }
+
+  &:--active {
+     background-color: var(--color-button--active);
+
+    .t-dark & { background-color: var(--color-button-dark--active); }
+   }
 
 
   &:--disabled {
@@ -92,11 +108,18 @@ section: Components
     color: var(--color-button-disabled--secondary);
     -ms-pointer-events: none;
     pointer-events: none;
+
+    .t-dark & { color: var(--color-button-disabled--dark); }
   }
 
   @media print { display: none; }
 
-  :--fullscreen & { font-size: 1rem; }
+  .t-dark & { color: var(--color-button-dark--secondary); }
+
+  :--fullscreen & {
+    color: var(--color-button-dark--secondary);
+    font-size: 1rem;
+  }
 
   & .c-icon { vertical-align: middle; }
 }
@@ -115,7 +138,8 @@ section: Components
 .c-button--colored {
   color: var(--color-button-alt--primary);
 
-  &:focus:not(:active) { background-color: var(--color-button-alt--focus); }
+  &:focus:not(:active),
+   &.is-focused { background-color: var(--color-button-alt--focus); }
 
   &:--disabled { color: var(--color-button-disabled--secondary); }
 }
@@ -143,7 +167,8 @@ section: Components
     &::after { box-shadow: var(--shadow-3); }
   }
 
-  &:focus:not(:active) {
+  &:focus:not(:active),
+   &.is-focused {
     background-color: var(--color-button--active);
 
     &::after { box-shadow: var(--shadow-focus); }
@@ -156,18 +181,32 @@ section: Components
      pointer-events: none;
 
     &::after { box-shadow: none; }
+
+     .t-dark & {
+       background-color: var(--color-button-dark--primary);
+       color: var(--color-button-disabled--dark);
+    }
    }
 
   &.c-button--colored {
-    background: var(--color-button-alt--primary);
+    background-color: var(--color-button-alt--primary);
     color: var(--color-button-alt--secondary);
 
     &:hover { background-color: var(--color-button-alt--hover); }
 
-    &:active { background-color: var(--color-button-alt--active); }
+    &:--active {
+       background-color: var(--color-button-alt--active);
 
-    &:focus:not(:active) { background-color: var(--color-button-alt--active); }
+      .t-dark & {
+        background-color: var(--color-button-dark--active);
+      }
+     }
+
+    &:focus:not(:active),
+     &.is-focused { background-color: var(--color-button-alt--active); }
    }
+
+   .t-dark & { background-color: var(--color-button-alt--primary); }
 }
 
 
