--- a/src/css/components/expansion-panel.css
+++ b/src/css/components/expansion-panel.css
@@ -1,48 +1,72 @@
+:root {
+  --fontSize-expansion-panel: 15px;
+  --height-expansion-panel: 3em;
+  --paddingY-expansion-panel: 1em;
+  --paddingY-expansion-panel__list-content: calc(var(--height-expansion-panel) / 4);
+  --paddingBottom-expansion-panel__list-content--expanded: calc(var(--paddingY-expansion-panel__list-content) / 2);
+  --paddingX-expansion-panel: 1.5em;
+  --lineHeight-expansion-panel: 1.5em;
+  --margin-expansion-panel__button: .5em;
+  --color-expansion-panel: var(--grey-700);
+  --color-expansion-panel__icon: var(--color-expansion-panel);
+  --color-expansion-panel__title: var(--grey-900);
+  --border-expansion-panel: var(--grey-200) 1px solid;
+  --backgroundColor-expansion-panel--focus: var(--grey-50);
+}
+
 .c-expansion-panel {
   @apply --card;
-  color: var(--grey-700);
+  color: var(--color-expansion-panel);
+  font-size: var(--fontSize-expansion-panel);
   margin: 0;
   overflow: hidden;
   padding: 0;
   transition: background .3s ease, height .2s ease, margin .2s ease;
 
-  &:focus:not(.is-expanded) { background-color: var(--grey-50); }
-  &:not(:first-child).is-expanded { margin-top: 1em; }
-  &:not(:last-child).is-expanded { margin-bottom: 1em; }
-  &:not(.is-expanded):not(:last-child) { border-bottom: 1px solid var(--grey-200); }
+  &:focus:not(.is-expanded) { background-color: var(--backgroundColor-expansion-panel--focus); }
+  &:not(:first-child).is-expanded { margin-top: var(--paddingY-expansion-panel); }
+  &:not(:last-child).is-expanded { margin-bottom: var(--paddingY-expansion-panel); }
+  &:not(.is-expanded):not(:last-child) { border-bottom: var(--border-expansion-panel); }
 }
 
 
   .c-expansion-panel__list-content {
     @apply --row;
     @apply --middle;
-    padding-bottom: 12px;
-    padding-top: 12px;
-    line-height: 24px;
+    padding-bottom: var(--paddingY-expansion-panel__list-content);
+    padding-top: var(--paddingY-expansion-panel__list-content);
+    line-height: var(--lineHeight-expansion-panel);
+    transition: padding .2s ease;
 
     .is-expanded & {
-      padding-bottom: 6px;
-      padding-top: 20px;
+      padding-bottom: var(--paddingBottom-expansion-panel__list-content--expanded);
+      padding-top: calc(var(--paddingY-expansion-panel__list-content) + .5em);
     }
   }
 
 
   .c-expansion-panel__title {
     @apply --width-column-3;
-    color: var(--grey-900);
-    margin-left: 24px;
+    color: var(--color-expansion-panel__title);
+    margin-left: var(--paddingX-expansion-panel);
     padding: 0;
   }
 
 
   .c-expansion-panel__info {
     @apply --width-column-auto;
-    margin-left: 16px;
+    margin-left: calc(var(--paddingX-expansion-panel) / 1.5);
     padding: 0;
-    transition: opacity .2s ease;
 
-    .is-expanded & { opacity: 0; }
+    & .c-icon {
+      --size: 18px;
+      fill: var(--grey-700);
+      margin: 0 calc(var(--paddingX-expansion-panel) / 3);
+      height: var(--size);
+      width: var(--size);
+      }
   }
+
 
 
   .c-expansion-panel__expand-icon {
@@ -50,10 +74,10 @@
     min-width: 0;
     max-width: 24px !important;
     margin-left: 16px;
-    margin-right: 24px;
+    margin-right: var(--paddingX-expansion-panel);
 
     & .c-icon {
-      color: var(--grey-700);
+      fill: var(--grey-700);
       transform-origin: 50% 50%;
       width: 24px;
       height: 24px;
@@ -65,11 +89,11 @@
 
 
 .c-expansion-panel__secondary-content {
-  padding: 14px 24px;
+  padding: 14px var(--paddingX-expansion-panel);
   transition: background .2s ease, height .2s ease, opacity .3s ease, padding-top .2s ease, padding-bottom .2s ease;
 
   &.is-selectable:focus,
-  &.is-selectable:hover { background-color: var(--grey-50); }
+  &.is-selectable:hover { background-color: var(--backgroundColor-expansion-panel--focus); }
 
   .c-expansion-panel:not(.is-expanded) & {
     border: 0 solid transparent;
@@ -79,7 +103,17 @@
     padding-top: 0;
   }
 
-  & + & { border-top: 1px solid var(--grey-200); }
+  & + & { border-top: var(--border-expansion-panel); }
+}
+
+.c-expansion-panel__actions {
+  border-top: var(--border-expansion-panel);
+  margin: var(--paddingY-expansion-panel) -var(--paddingX-expansion-panel) 0;
+  padding:
+    var(--paddingY-expansion-panel)
+    calc(var(--paddingX-expansion-panel) / 3)
+    0
+    var(--paddingX-expansion-panel);
 }
 
 
