--- a/src/css/settings/colour.css
+++ b/src/css/settings/colour.css
@@ -118,8 +118,11 @@ section: Settings
   --color-shadow: rgba(51, 51, 42, .6);
   --color-backdrop: rgba(0, 0, 0, .6);
   --color-backdrop--inverted: rgba(255, 255, 255, .6);
-  --color-primary: var(--blue-900);
-  --color-secondary: var(--orange-800);
+  --color-primary: var(--blue-500);
+  --color-primary-dark: var(--blue-700);
+  --color-accent: var(--orange-500);
+  --color-primary-contrast: var(--white);
+  --color-accent-contrast: var(--white);
 }
 
 /* Backgrounds and Borders */
@@ -162,13 +165,11 @@ section: Settings
 
   /* Button */
 
-  --backgroundColor-button: var(--blue-900);
+  --backgroundColor-button: var(--blue-700);
   --backgroundColor-button--hover: var(--blue-500);
-  --backgroundColor-button-alert: var(--red-800);
-  --backgroundColor-button-alert--hover: var(--red-700);
+  --backgroundColor-button-alert: var(--red-700);
+  --backgroundColor-button-alert--hover: var(--red-500);
   --backgroundColor-button-anchor: transparent;
-  --backgroundColor-button-passive: var(--blue-100);
-  --backgroundColor-button-passive--hover: var(--white);
   --backgroundColor-button-secondary: var(--orange-800);
   --backgroundColor-button-secondary--hover: var(--orange-700);
   --backgroundColor-button-text: transparent;
@@ -243,7 +244,7 @@ section: Settings
 
   /* Loader */
 
-  --color-loader: var(--color-secondary);
+  --color-loader: var(--color-accent);
   --color-loader--alt: var(--grey-200);
   --color-loader-secondary: var(--blue-300);
 
@@ -289,6 +290,7 @@ section: Settings
   --shadow-3: 0 10px 20px rgba(0, 0, 0, .19), 0 6px 6px rgba(0, 0, 0, .23);
   --shadow-4: 0 14px 28px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .22);
   --shadow-5: 0 19px 38px rgba(0, 0, 0, .3), 0 15px 12px rgba(0, 0, 0, .22);
+  --shadow-focus: 0 0 8px rgba(0,0,0,.18),0 8px 16px rgba(0,0,0,.36);
   --shadow-dropdown: var(--shadow-2);
   --shadow-dropdown-picker: inset 0 10px 11px -7px rgba(0, 0, 0, .5), inset 0 -10px 11px -7px rgba(0, 0, 0, .5);
   --toggle-focus-shadow: 0 0 6px var(--blue-600);
@@ -328,6 +330,7 @@ section: Settings
 
 :root {
   /* Legacy Colors */
+  --color-secondary: var(--color-accent);
   --purple-a100: var(--purple-900);
   --magenta-500: var(--purple-500);
 
