--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -128,6 +128,7 @@ section: Components
 .c-button__content { @apply --start; }
 
 
+.c-button-small,
 .c-button--dense {
   height: var(--size-button--dense);
   font-size: var(--fontSize-button--dense);
