Updated Button icon min-width

--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -217,7 +217,7 @@ section: Components
 
 .c-button--icon {
   color: var(--grey-700);
-  min-width: auto;
+  min-width: 36px;
 
   &:hover { color: var(--grey-800); }
 
