Updated components and removed aside

--- a/src/css/untangled-ui-guide.css
+++ b/src/css/untangled-ui-guide.css
@@ -30,6 +30,10 @@ import: ../README.md
 
 .box-tall { padding: 200px 0; }
 
+.ui-example {
+  margin-bottom: var(--frame-half);
+}
+
 .ui-example__description {
   :--headings {
     color: var(--grey-900);
